<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVerticalId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHorizontalId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/flower"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintWidth_percent=".2"
        app:layout_constraintStart_toEndOf="@id/guideLineVerticalId"
        android:baselineAlignBottom="true"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHorizontalId"
        />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/flower"
        app:layout_constraintHeight_percent=".1"
        app:layout_constraintWidth_percent=".2"
        android:baselineAlignBottom="true"
        app:layout_constraintStart_toEndOf="@id/img1"
        app:layout_constraintTop_toBottomOf="@id/guideLineHorizontalId"
        android:layout_marginStart="20dp"
        />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/flower"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintWidth_percent=".2"
        android:baselineAlignBottom="true"
        app:layout_constraintStart_toEndOf="@id/img2"
        app:layout_constraintTop_toBottomOf="@id/img2"
        android:layout_marginStart="10dp"
        />

    <EditText
        android:id="@+id/emailEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img3"
        android:hint="@string/your_email"
        app:layout_constraintWidth_percent=".7"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"/>


    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEt"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintWidth_percent=".7"
        android:layout_marginTop="5dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEt"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>
